# trying-haskell

./: .dockerignore  .gitignore  API_TEST_EXAMPLES.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_EXAMPLE.md  LICENSE  QUICK_DEPLOY.md  QUICK_START.md  README.md  TEST_CHECKLIST.md  UI_OPTIONS.md  leaderboard.db  render.yaml  test_api.sh  trying-haskell.cabal
app/: Main.hs  Web.hs
src/: Database.hs  Game.hs
static/: app.js  index.html  style.css
test/: Spec.hs
