cabal-version:       2.4
name:                trying-haskell
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs: src
  exposed-modules: Game
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable trying-haskell
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base >=4.7 && <5,
      trying-haskell
  default-language: Haskell2010

test-suite game-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
      base >=4.7 && <5,
      trying-haskell
  default-language: Haskell2010
